--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-the salt and sparks that don't fit in the overhead
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500&display=swap" rel="stylesheet">
+    <title>Mage in the Machine</title>
+</head>
+<body>
+    
+<p>the salt and sparks that don't fit in the overhead</p>
+
+</body>
+</html>
+
+
+
