--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     
 <p>the salt and sparks that don't fit in the overhead</p>
+<p class="title">Mage in the Machine</p>
 
 </body>
 </html>
