--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <title>Mage in the Machine</title>
 </head>
 <body>
-    
-<p>the salt and sparks that don't fit in the overhead</p>
-<p class="title">Mage in the Machine</p>
-
+    <header>
+        <div class="header">
+            the salt and sparks that don't fit in the overhead
+        </div>
+    </header>
+    <div class="title">
+        Mage in the Machine
+    </div>
 </body>
 </html>
 
