--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <header>
         <div class="header">
-            salt and sparks that don't fit in the overhead
+            sparks that don't fit in the overhead
         </div>
     </header>
     <div class="title">
-        Mage in the Machine
+        the Mage in the Machine
     </div>
 </body>
 </html>
