Further title alteration - back to Mage in the Machine without 'the'

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
     </header>
     <div class="title">
-        the Mage in the Machine
+        Mage in the Machine
     </div>
 </body>
 </html>
