--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="header">
-            sparks that don't fit in the overhead
+            the sparks that don't fit in the overhead
         </div>
     </header>
     <div class="title">
