Small change to 050522

--- a/entries/050522.html
+++ b/entries/050522.html
@@ -24,7 +24,7 @@
         <p>It is the angle at which you hold the stone carving or the material mess up to the light for an audience to see. The light itself helps, but audiences lap frames up like square cats. Maybe the frame means more 
         than the canvas itself, or the prints you cover it with, or the stained light through windows.</p> 
         <p>I can't remember the name of the song, but I can remember the frame, and how it held
-        the music up in a space just above Stratford Stadium, Essex growing larger and quieter under my racing sight.</p>
+        the music up in a space just above Stratford, my home county growing large and hushed under my racing sight.</p>
     
     </div>
     <div class="dateentry">
