Add To Do list and alter 050522

--- a/entries/050522.html
+++ b/entries/050522.html
@@ -20,7 +20,7 @@
     <div class="mainentry">
         On a train out of Liverpool Street, heading towards everything I know best. I was listening to an NTS DJ playing two versions of a Madonna track, produced 24 years apart. 
         It made me think about the importance of framing. 
-        <p>Framing can be the quiet surrounding whatever you're about to shout out into the world. It's a quiet you can create yourself if you know how.</p>
+        <p>Framing can be the quiet surrounding whatever you're about to shout into the world. It's a quiet you can create yourself if you know how.</p>
         <p>It is the angle at which you hold the stone carving or the material mess up to the light for an audience to see. The light itself helps, but audiences lap frames up like square cats. Maybe the frame means more 
         than the canvas itself, or the prints you cover it with, or the stained light through windows.</p> 
         <p>I can't remember the name of the song, but I can remember the frame, and how it held
