Start project section - begin to add hover html for project descriptions

--- a/entries/050522.html
+++ b/entries/050522.html
@@ -28,7 +28,7 @@
     
     </div>
     <div class="dateentry">
-        Essex 050522    //    Saint Etienne - Paper                
+        Essex 050522             
     </div>
 </body>
 </html>
