--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <span class="time-drifter">time drifter</span> / <span class="plane-shifter">plane shifter</span> 
     </div>
     <div class="links">
-        <a href="./entries/frames050522.html">frames050522</a>
+        <p><a href="./entries/frames050522.html">frames050522</a>
+        <br><a href="./entries/seahippo080522.html">seahippo080522</a></p>
     </div>
   
     <div class="projecttitle">
