--- a/entries/seahippo080522.html
+++ b/entries/seahippo080522.html
@@ -24,12 +24,12 @@
         </p>
         <p>Earlier in the day, I spent a patch of time trying to piece together my thoughts on three huge circling birds, whether 
             they were some form of urban kestrel brought in to police the local pigeon population, or merely predatory
-            gulls with unusual flight patterns and swaggering wings. 
+            gulls with unusual flight patterns and swagger in their wings. 
         </p> 
         <p>During the reign of Pharaoh Akhenaten - formerly known as Amenhotep IV, sometimes spelled Echnaton, supposed father of the famous Tut, believed
-            to have married his own sister, known to us only as 'The Younger Lady', though it seems unfair that no one made up a name for her since no one alive now
-            would know any better - there were probably predatory birds wheeling over the wooded glades of what is now Salford.</p>
-        <p>It's gladeless now, though on a clear day the peaks still have you dreaming of whatever landscapes might still mean, timeless as 
+            to have married his own sister, known to us only as 'The Younger Lady', though it seems unfair that even to this day no one has made up a name to give to her - there were probably predatory 
+            birds wheeling over the wooded glades of what we is now called Salford.</p>
+        <p>Today it's gladeless, though on a clear afternoon the peaks still have you dreaming of whatever landscapes might still mean, timeless as 
             animals doing only what they can, that which comes naturally.</p>
     </div>
     <div class="dateentry">
