Amend SeaHippo typo

--- a/entries/seahippo080522.html
+++ b/entries/seahippo080522.html
@@ -28,7 +28,7 @@
         </p> 
         <p>During the reign of Pharaoh Akhenaten - formerly known as Amenhotep IV, sometimes spelled Echnaton, supposed father of the famous Tut, believed
             to have married his own sister, known to us only as 'The Younger Lady', though it seems unfair that even to this day no one has made up a name to give to her - there were probably predatory 
-            birds wheeling over the wooded glades of what we is now called Salford.</p>
+            birds wheeling over the wooded glades of what is now called Salford.</p>
         <p>Today it's gladeless, though on a clear afternoon the peaks still have you dreaming of whatever landscapes might still mean, timeless as 
             animals doing only what they can, that which comes naturally.</p>
     </div>
