--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
   
     <div class="projecttitle">
-        unwieldy projects
+        projects
     </div> 
         <p>flashes + phantoma</p>
         <p>magic + machine</p>
