--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
         <span class="time-drifter">time drifter</span> / <span class="plane-shifter">plane shifter</span> 
     </div>
     <div class="links">
-        <p><a href="./entries/frames050522.html">frames050522</a>
-        <br><a href="./entries/seahippo080522.html">seahippo080522</a></p>
+        <p>
+            <a href="./entries/amazonia140522.html">amazonia140522</a>
+            <br><a href="./entries/frames050522.html">frames050522</a>
+            <br><a href="./entries/seahippo080522.html">seahippo080522</a>
+        </p>
     </div>
   
     <div class="projecttitle">
