Add further image

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div class="imgcontainer"><img src="./resources/images/heron.jpg"></div>
         <div class="imgcontainer"><img src="./resources/images/treeedit.jpg"></div>
         <div class="imgcontainer"><img src="./resources/images/mineralpattern.jpg"></div>
+        <div class="imgcontainer"><img src="./resources/images/widetree.jpg"></div>
     </div>
 
     
