Edit amazonia to remove few words

--- a/entries/amazonia140522.html
+++ b/entries/amazonia140522.html
@@ -35,8 +35,8 @@
              you have it.
         </p>
         <p>There's something there about how we share shadow and light with absolutely everything. In the end, we're 
-            just a bewildered series of flat surfaces, all jauntily angled, like a Jurassic fern before the great 
-            burning came from the sky.
+            just a bewildered series of flat surfaces, all jauntily angled, like a Jurassic fern before the Great 
+            Burning.
         </p>
         <p>Photograph everything from above. Nothing on the ground surprises us frequently enough any more.</p>
         <p>A fishing expedition with the extended family and unusual pets is about all I, or anyone else, could ask for - 
