Add mexican dog and alps image, adjust img containers

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
         the arcade
     </div>
     <div class="images">
-        <div class="imgcontainer"><img src="./resources/images/heron.jpg"></div>
-        <div class="imgcontainer"><img src="./resources/images/treeedit.jpg"></div>
-        <div class="imgcontainer"><img src="./resources/images/mineralpattern.jpg"></div>
-        <div class="imgcontainer"><img src="./resources/images/widetree.jpg"></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/heron.jpg"></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/treeedit.jpg"></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/alps.jpg"></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/mexicandog.jpg"></div>
+        <div class="imgcontainerlonglandscape"><img src="./resources/images/mineralpattern.jpg"></div>
+        <div class="imgcontainerlonglandscape"><img src="./resources/images/widetree.jpg"></div>
     </div>
 
     
