Alter font size again and tidy up CSS

--- a/entries/wetradiovoice230522.html
+++ b/entries/wetradiovoice230522.html
@@ -25,7 +25,7 @@
         <p>
             A radio station from Toronto - one man and one woman speaking through a filter of digital warp. It downtunes 
         and softens their voices. I get the sense it's not pre-recorded, but live and transformed in the moment. 
-        Gives the effect that they could be just underwater, in the comfortable shallows, with blue light and pillows 
+        Gives the effect they could be just underwater, in the comfortable shallows, with blue light and pillows 
         of fish all around. They talk as if moontouched or stoned.
         </p>
         
