Add new images, start experiment with transitions

--- a/index.html
+++ b/index.html
@@ -36,19 +36,23 @@
         <p>magic + machine</p>
         <p>dawn cuts evening blues</p>
     <div class="arcadetitle">
-        the arcade
+        the screen reader's arcade
     </div>
     <div class="images">
-        <div class="imgcontainershortlandscape"><img src="./resources/images/heron.jpg"></div>
-        <div class="imgcontainerhigher"><img src="./resources/images/treeedit.jpg"></div>
-        <div class="imgcontainerhigher"><img src="./resources/images/alps.jpg"></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/mountainlake.jpg" alt="mountains I haven't visited" id="mountainlakepic"><p>mountains I haven't visited</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/heron.jpg" alt="lone heron in a pixellated gull field - grainy and double screened" id="heronpic"><p>lone heron in a pixellated gull field - grainy and double screened</p></div>
         <div class="imgcontainerhigher"><img src="./resources/images/mexicandog.jpg"></div>
+        <div class="imgcontainersmallsquare"><img src="./resources/images/treeedit.jpg"></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/sleepingcat.jpg"></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/alps.jpg"></div>
         <div class="imgcontainerlonglandscape"><img src="./resources/images/mineralpattern.jpg"></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/sicily.jpg"></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg"></div>
         <div class="imgcontainerlonglandscape"><img src="./resources/images/widetree.jpg"></div>
     </div>
 
     
-    
+
 </body>
 </html>
 
