add captions to existing photos, few caption edits

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
     </div>
     <div class="images">
         <div class="imgcontainerhigher"><img src="./resources/images/mountainlake.jpg" alt="mountains I haven't visited" id="mountainlakepic"><p>mountains I haven't visited</p></div>
-        <div class="imgcontainershortlandscape"><img src="./resources/images/heron.jpg" alt="lone heron in a pixellated gull field - grainy and double screened" id="heronpic"><p>lone heron in a pixellated gull field - grainy and double screened</p></div>
-        <div class="imgcontainerhigher"><img src="./resources/images/mexicandog.jpg"></div>
-        <div class="imgcontainersmallsquare"><img src="./resources/images/treeedit.jpg"></div>
-        <div class="imgcontainershortlandscape"><img src="./resources/images/sleepingcat.jpg"></div>
-        <div class="imgcontainerhigher"><img src="./resources/images/alps.jpg"></div>
-        <div class="imgcontainerlonglandscape"><img src="./resources/images/mineralpattern.jpg"></div>
-        <div class="imgcontainerhigher"><img src="./resources/images/sicily.jpg"></div>
-        <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg"></div>
-        <div class="imgcontainerlonglandscape"><img src="./resources/images/widetree.jpg"></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/heron.jpg" alt="lone heron in a pixel gull field, scrubbed through two screens" id="heronpic"><p>lone heron in a pixel gull field, scrubbed through two screens</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/mexicandog.jpg" alt="lone dog on dappled cotton" id="mexicandogpic"><p>lone dog on dappled cotton</p></div>
+        <div class="imgcontainersmallsquare"><img src="./resources/images/treeedit.jpg" alt="beneath this silver birch and vapour trail, people were covered in mud, burning up, trying to complete a marathon. we walked and watched, breathing relatively free." id="treeeditpic"><p>beneath this silver birch and vapour trail, people were covered in mud, burning up, trying to complete a marathon. we walked and watched, breathing relatively free.</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/sleepingcat.jpg" alt="lone cat on dream felt" id="sleepingcatpic"><p>lone cat on dream felt</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/alps.jpg" alt="more mountains I haven't seen, and a moon I have" id="alpspic"><p>more mountains I haven't seen, and a moon I have</p></div>
+        <div class="imgcontainerlonglandscape"><img src="./resources/images/mineralpattern.jpg" alt="mineral stomach under blue glass" id="mineralpatternpic"><p>mineral stomach under blue glass</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/sicily.jpg" alt="tidal sheep in a green field" id="sicilypic"><p>tidal sheep in a green field</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>cuscus watching water on the ink curtain beach</p></div>
+        <div class="imgcontainerlonglandscape"><img src="./resources/images/widetree.jpg" alt="the silver tree's cousins, turned on their sides" id="widetreepic"><p>the silver tree's cousins, turned on their sides</p></div>
     </div>
 
     
