Add first Optic Verve entry and extra css for entries with images appearing within them

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         <p>flashes + phantoma</p>
         <p>magic + machine</p>
         <p>dawn cuts evening blues</p>
+    
+    <div class="navigationtitle">
+        optic verve
+    </div>
+    <div class="links">
+        <p><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a></p>
+    </div>
+
+    
     <div class="arcadetitle">
         the screen reader's arcade
     </div>
