Add home run, add tree walk image, add css styling for portrait size

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         optic verve
     </div>
     <div class="links">
-        <p><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a></p>
+        <p><a href="./entries/opticverve/homerun070622.html">homerun070622</a>
+        <br>
+        <a href="./entries/opticverve/motherplant170522.html">motherplant170522</a></p>
     </div>
 
     
@@ -57,8 +59,9 @@
         <div class="imgcontainerhigher"><img src="./resources/images/alps.jpg" alt="more mountains I haven't seen, and a moon I have" id="alpspic"><p>more mountains I haven't seen, and a moon I have</p></div>
         <div class="imgcontainerlonglandscape"><img src="./resources/images/mineralpattern.jpg" alt="mineral stomach under blue glass" id="mineralpatternpic"><p>mineral stomach under blue glass</p></div>
         <div class="imgcontainerhigher"><img src="./resources/images/sicily.jpg" alt="tidal sheep in a green field" id="sicilypic"><p>tidal sheep in a green field</p></div>
-        <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>cuscus watching water on the ink curtain beach</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>bomba watching water on the ink curtain beach</p></div>
         <div class="imgcontainerlonglandscape"><img src="./resources/images/widetree.jpg" alt="the silver tree's cousins, turned on their sides" id="widetreepic"><p>the silver tree's cousins, turned on their sides</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/treewalk.jpg" alt="the further you can see through forests, the further you want to walk" id="treewalkpic"><p>the further you can see through forests, the further you want to walk</p></div>
     </div>
 
     
