Add new image to home run

--- a/entries/opticverve/homerun070622.html
+++ b/entries/opticverve/homerun070622.html
@@ -26,8 +26,8 @@
     </div>
 
     <div class="images">
-        <div class="imgcontainerportrait">
-            <img src="../../resources/images/opticverve/homerun1.jpg" alt="evening field">
+        <div class="imgcontainerhigher">
+            <img src="../../resources/images/opticverve/homerun6.jpg" alt="field beneath eve">
         </div>
     </div>
 
@@ -57,12 +57,23 @@
 
     <div class="mainentryimagebreak">
         <p>
-            I want to write about how the different districts of my home town carry tints of significance that bolden with the years. I am becoming emotionally attached to every nuanced, gormless street, every window and quiet drive, the tilted structures at the edges of tilled land, every crunch under the East Anglian gulf, my cradle above.
+            I want to write about how the different districts of my home town carry tints of significance that bolden with the years. 
+        </p>
+    </div>
+    
+    <div class="images">
+        <div class="imgcontainerportrait">
+            <img src="../../resources/images/opticverve/homerun1.jpg" alt="evening field">
+        </div>
+    </div>
+
+    <div class="mainentryimagebreak">
+        <p>I am becoming emotionally attached to every nuanced, gormless street, every window and quiet drive, the tilted structures at the edges of tilled land, every crunch under the East Anglian gulf, my cradle above.
         </p>
     </div>
   
     <div class="images">
-        <div class="imgcontainerhigher">
+        <div class="imgcontainershortlandscape">
             <img src="../../resources/images/opticverve/homerun4.jpg" alt="farmhouse covered with flowers">
         </div>
     </div>
