New pics, add heron and field

--- a/entries/opticverve/motherplant170522.html
+++ b/entries/opticverve/motherplant170522.html
@@ -23,7 +23,7 @@
  
     <div class="mainentryimagebreak">
         <p>
-            My mother sent me a photo of the mother plant. The mother plant is a sprawling tradescantia that was dying when I arrived and dying most of the time I was bringing it back to life and even once I had it back to life I always thought of it as dying, the same way one can only ever think of a younger sibling as being a child, and therefore helpless, no matter how old they are. I imagine it's the same when you have kids of your own. 
+            My mum sent me a photo of the mother plant. The mother plant is a sprawling tradescantia that was dying when I arrived and dying most of the time I was bringing it back to life and even once I had it back to life I always thought of it as dying, the same way one can only ever think of a younger sibling as being a child, and therefore helpless, no matter how old they are. I imagine it's the same when you have kids of your own. 
         </p>
     </div>
     <div class="images">
@@ -31,7 +31,7 @@
     </div>
     <div class="mainentry">
         <p>
-            The photo is significant because the plant is flowering. My mother says she's never seen a tradescantia do that before, and they've been dying all over our house for years.
+            The photo is significant because the plant is flowering. My mum says she's never seen a tradescantia do that before, and they've been dying all over our house for years.
         </p>
         <p>
             I lifted the mother plant from my previous flat and carried it home. Looking at it always made me think of constellations above unwatered dirt, networks of dry cables trying to make it over the desert. Whenever it is healthy, as it appears to be now, I think of the colour hidden within things. 
