--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <div class="arcadetitle">
         the screen reader's arcade
     </div>
+
     <div class="images">
         <div class="imgcontainerhigher"><img src="./resources/images/mountainlake.jpg" alt="mountains I haven't visited" id="mountainlakepic"><p>mountains I haven't visited</p></div>
         <div class="imgcontainershortlandscape"><img src="./resources/images/heron.jpg" alt="lone heron in a pixel gull field, scrubbed through two screens" id="heronpic"><p>lone heron in a pixel gull field, scrubbed through two screens</p></div>
@@ -61,10 +62,10 @@
         <div class="imgcontainerhigher"><img src="./resources/images/sicily.jpg" alt="tidal sheep in a green field" id="sicilypic"><p>tidal sheep in a green field</p></div>
         <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>bomba watching water on the ink curtain beach</p></div>
         <div class="imgcontainerlonglandscape"><img src="./resources/images/widetree.jpg" alt="the silver tree's cousins, turned on their sides" id="widetreepic"><p>the silver tree's cousins, turned on their sides</p></div>
-        <div class="imgcontainerhigher"><img src="./resources/images/treewalk.jpg" alt="the further you can see through forests, the further you want to walk" id="treewalkpic"><p>the further you can see through forests, the further you want to walk</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/treewalk.jpg" alt="the further you can see through forests, the further you walk" id="treewalkpic"><p>the further you can see through forests, the further you walk</p></div>
+        <div class="imgcontainerlonglandscape"><img src="./resources/images/heronalone.jpg" alt="lone heron in a pixel field, no gulls, still scrubbed through two screens" id="heronalonepic"><p>lone heron in a pixel field, no gulls, <br>still scrubbed through two screens</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/field.jpg" alt="mooncrop" id="fieldpic"><p>mooncrop</p></div>
     </div>
-
-    
 
 </body>
 </html>
