Add skywitch and a few edits

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="./entries/amazonia140522.html">amazonia140522</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
+            <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
             <br><a href="./entries/videoreps250522.html">videoreps230522</a>
             <br><a href="./entries/wetradiovoice230522.html">wetradiovoice230522</a>
         </p>
@@ -41,9 +42,10 @@
         optic verve
     </div>
     <div class="links">
-        <p><a href="./entries/opticverve/homerun070622.html">homerun070622</a>
-        <br>
-        <a href="./entries/opticverve/motherplant170522.html">motherplant170522</a></p>
+        <p>
+            <a href="./entries/opticverve/homerun070622.html">homerun070622</a>
+            <br><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a>
+        </p>
     </div>
 
     
@@ -53,17 +55,29 @@
 
     <div class="images">
         <div class="imgcontainerhigher"><img src="./resources/images/mountainlake.jpg" alt="mountains I haven't visited" id="mountainlakepic"><p>mountains I haven't visited</p></div>
+
         <div class="imgcontainershortlandscape"><img src="./resources/images/heron.jpg" alt="lone heron in a pixel gull field, scrubbed through two screens" id="heronpic"><p>lone heron in a pixel gull field, scrubbed through two screens</p></div>
+
         <div class="imgcontainerhigher"><img src="./resources/images/mexicandog.jpg" alt="lone dog on dappled cotton" id="mexicandogpic"><p>lone dog on dappled cotton</p></div>
+
         <div class="imgcontainersmallsquare"><img src="./resources/images/treeedit.jpg" alt="beneath this silver birch and vapour trail, people were covered in mud, burning up, trying to complete a marathon. we walked and watched, breathing relatively free." id="treeeditpic"><p>beneath this silver birch and vapour trail, people were covered in mud, burning up, trying to complete a marathon. we walked and watched, breathing relatively free.</p></div>
+
         <div class="imgcontainershortlandscape"><img src="./resources/images/sleepingcat.jpg" alt="lone cat on dream felt" id="sleepingcatpic"><p>lone cat on dream felt</p></div>
+
         <div class="imgcontainerhigher"><img src="./resources/images/alps.jpg" alt="more mountains I haven't seen, and a moon I have" id="alpspic"><p>more mountains I haven't seen, and a moon I have</p></div>
+
         <div class="imgcontainerlonglandscape"><img src="./resources/images/mineralpattern.jpg" alt="mineral stomach under blue glass" id="mineralpatternpic"><p>mineral stomach under blue glass</p></div>
+
         <div class="imgcontainerhigher"><img src="./resources/images/sicily.jpg" alt="tidal sheep in a green field" id="sicilypic"><p>tidal sheep in a green field</p></div>
+
         <div class="imgcontainershortlandscape"><img src="./resources/images/yuvshore.jpg" alt="cuscus watching water on the ink curtain beach" id="yuvshorepic"><p>bomba watching water on the ink curtain beach</p></div>
+
         <div class="imgcontainerlonglandscape"><img src="./resources/images/widetree.jpg" alt="the silver tree's cousins, turned on their sides" id="widetreepic"><p>the silver tree's cousins, turned on their sides</p></div>
+
         <div class="imgcontainershortlandscape"><img src="./resources/images/treewalk.jpg" alt="the further you can see through forests, the further you walk" id="treewalkpic"><p>the further you can see through forests, the further you walk</p></div>
+
         <div class="imgcontainerlonglandscape"><img src="./resources/images/heronalone.jpg" alt="lone heron in a pixel field, no gulls, still scrubbed through two screens" id="heronalonepic"><p>lone heron in a pixel field, no gulls, <br>still scrubbed through two screens</p></div>
+
         <div class="imgcontainerhigher"><img src="./resources/images/field.jpg" alt="mooncrop" id="fieldpic"><p>mooncrop</p></div>
     </div>
 
