Add brightlingsea, few minor amendments on other entries

--- a/entries/opticverve/homerun070622.html
+++ b/entries/opticverve/homerun070622.html
@@ -73,7 +73,7 @@
     </div>
   
     <div class="images">
-        <div class="imgcontainershortlandscape">
+        <div class="imgcontainerhigher">
             <img src="../../resources/images/opticverve/homerun4.jpg" alt="farmhouse covered with flowers">
         </div>
     </div>
