--- a/entries/opticverve/motherplant170522.html
+++ b/entries/opticverve/motherplant170522.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="dateentry">
-           Colchester 170522         
+           Essex 170522         
     </div>
 </body>
 </html>
