--- a/entries/wetradiovoice230522.html
+++ b/entries/wetradiovoice230522.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../resources/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;250;300;350;400;500;600;700&display=swap" rel="stylesheet">
-    <title>wetradiovoice230522/title>
+    <title>wetradiovoice230522</title>
 </head>
 <body>
     <header>
