Add promethean party and do minor edits on index and celestiac

--- a/entries/opticverve/celestiac100622.html
+++ b/entries/opticverve/celestiac100622.html
@@ -101,7 +101,7 @@
 
     <div class="mainentry">
         <p>
-            People have to turn the right way for it to work, or they have to look purposeful, their backs to the lens.
+            People have to turn the right way for it to work, or they have to look purposeful, their backs against the lens.
         </p>
     </div>
 
