--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <p>
             <a href="./entries/amazonia140522.html">amazonia140522</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
+            <br><a href="./entries/prometheanparty240622.html">prometheanparty240622</a>
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
             <br><a href="./entries/videoreps250522.html">videoreps230522</a>
@@ -43,7 +44,8 @@
     </div>
     <div class="links">
         <p>
-            <a href="./entries/opticverve/homerun070622.html">homerun070622</a>
+            <a href="./entries/opticverve/celestiac100622.html">celestiac100622</a>
+            <br><a href="./entries/opticverve/homerun070622.html">homerun070622</a>
             <br><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a>
         </p>
     </div>
