Add images and tidy up a few entries

--- a/entries/prometheanparty240622.html
+++ b/entries/prometheanparty240622.html
@@ -29,7 +29,7 @@
             Vision of Promethean figure chained to the exposed stack of an industrial power plant, possibly nuclear, a vacant reek coming from the vast chimney, no steam or smoke, the complex clearly disused as the desert surrounding it on all sides.
         </p>
         <p>
-            The desert itself wriggles purple-red, nothing moves except convection, or the quivering of an eye faced with too little shade. The Promethean figure himself has probably been punished for something predictable - playing around with fusion reactors, inventing unnatural diets, writing hymns that ruin the ceremonies they're meant to save.
+            The desert wriggles purple-red. Nothing moves except convection, or the quivering of an eye faced with too little shade. The Promethean figure himself has probably been punished for something predictable - playing around with fusion reactors, inventing unnatural diets, writing hymns that ruin the ceremonies they're meant to save.
         </p>
         <p>
             The figure is resigned now to whichever gross torment's been given. I'm not sure what the punishment is, beyond being chained under the wild empty sun for all eternity. Perhaps every night people from all over the world travel out to the desert to fire up the power plant, plug in their ferris wheels, fairy lights, amplifiers, and mobile beer cellars, hold raging festivals out there in the sand beneath those Promethean eyes.
