--- a/entries/skywitchlandbubbles250622.html
+++ b/entries/skywitchlandbubbles250622.html
@@ -26,7 +26,7 @@
             Downgazing on green bubbles of Virginian land, I think of cauldrons and the witches rising out of the earth, not to derail us with prophecies or severed sailors' thumbs, but to reassure as that 'Yes, you're right, it really is worth looking at'. That's all magic's ever been - a reconjuring of wonder, dosed with a healthy amount of fear at the prospect of a 10,000 foot drop onto scorched farmlands.
         </p>
         <p>
-            Months ago my girlfriend talked about how the winter forest on the flank of a Devonshire vale looked like the internal fibres of a human lung. The land always looks, from enough of a distance, like some microscopic miracle.
+            Months ago my girlfriend talked about how the winter forest on the flank of a Devonshire vale looked like the internal airways of a human lung. The land always looks, from enough of a distance, like some microscopic miracle.
         </p>
         <p>
             All the best people I know would probably have been accused of witchcraft many seasons hence, seeing strange things in the world, marvelling at the bubbles, sometimes understanding their molecular structure, or how to heal them beneath a thin slide of glass. 
