--- a/index.html
+++ b/index.html
@@ -81,6 +81,17 @@
         <div class="imgcontainerlonglandscape"><img src="./resources/images/heronalone.jpg" alt="lone heron in a pixel field, no gulls, still scrubbed through two screens" id="heronalonepic"><p>lone heron in a pixel field, no gulls, <br>still scrubbed through two screens</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/field.jpg" alt="mooncrop" id="fieldpic"><p>mooncrop</p></div>
+
+        <div class="imgcontainershortlandscape"><img src="./resources/images/pond.jpg" alt="when we first moved here, the pond was filled with earth and empty wine bottles" id="pondpic"><p>when we first moved here, the pond was filled with earth and empty wine bottles</p></div>
+
+        <div class="imgcontainersmallsquare"><img src="./resources/images/closeupplants.jpg" alt="red tendrils that would suit an underwater scene" id="closeupplantspic"><p>red tendrils that could sprout from a coral reef, nowhere near water</p></div>
+
+        <div class="imgcontainerportrait"><img src="./resources/images/stadium.jpg" alt="listening to Soccer Mommy en las sombras de los estadios" id="stadiumpic"><p>listening to Soccer Mommy <br>in the shadows of stadiums</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/moon.jpg" alt="mooncrop" id="moonpic"><p>mooncrop</p></div>
+
+        <div class="imgcontainerhigher"><img src="./resources/images/redrock.jpg" alt="red rock echoing blues" id="redrockpic"><p>red rock echoing blues</p></div>
+
     </div>
 
 </body>
