Add guinea pig image, minor edit on Amazonia

--- a/entries/amazonia140522.html
+++ b/entries/amazonia140522.html
@@ -20,8 +20,8 @@
     <div class="mainentry">
         <p>The bending of a rain wall over impossible deltas. Try to locate the significance of what we term 
             'an infinitely varied existence' within the tattooed gloom of an elongated neck. Monkey fur posing 
-            in a temporary studio beneath the canopy. Wild night wisdom and locking out anyone who's glimpsed a 
-            motor vehicle.
+            in a temporary studio beneath the canopy. Wild night wisdom. Anyone who's glimpsed a 
+            motor vehicle, locked out. 
         </p>
         <p>Someone out there somewhere else is trying to program bacteria to execute simple algorithmic functions. 
             Others are trying to help computers accept the loss of cells as an inevitable part of ageing, just 
