--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/redrock.jpg" alt="red rock echoing blues" id="redrockpic"><p>red rock echoing blues</p></div>
 
-        <div class="imgcontainerportrait"><img src="./resources/images/guineapig.jpg" id="guineapigpic" alt="galactic guinea pig, winged and ruling from the glass"><p>galactic guinea pig, winged and ruling from the glass</p></div>
+        <div class="imgcontainerportrait"><img src="./resources/images/guineapig.jpg" id="guineapigpic" alt="galactic guinea pig, winged and ruling from the pane"><p>galactic guinea pig, winged and ruling from the pane</p></div>
 
     </div>
 
