Edit pond caption

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/field.jpg" alt="mooncrop" id="fieldpic"><p>mooncrop</p></div>
 
-        <div class="imgcontainershortlandscape"><img src="./resources/images/pond.jpg" alt="when we first moved here, the pond was filled with earth and empty wine bottles" id="pondpic"><p>when we first moved here, the pond was filled with earth and empty wine bottles</p></div>
+        <div class="imgcontainershortlandscape"><img src="./resources/images/pond.jpg" alt="when we first moved here, the pond was filled with earth and empty bottles" id="pondpic"><p>when we first moved here, the pond was filled with earth and empty bottles</p></div>
 
         <div class="imgcontainersmallsquare"><img src="./resources/images/closeupplants.jpg" alt="red tendrils that would suit an underwater scene" id="closeupplantspic"><p>red tendrils that could sprout from a coral reef, nowhere near water</p></div>
 
