Edit stadium caption

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="imgcontainersmallsquare"><img src="./resources/images/closeupplants.jpg" alt="red tendrils that would suit an underwater scene" id="closeupplantspic"><p>red tendrils that could sprout from a coral reef, nowhere near water</p></div>
 
-        <div class="imgcontainerportrait"><img src="./resources/images/stadium.jpg" alt="listening to Soccer Mommy en las sombras de los estadios" id="stadiumpic"><p>listening to Soccer Mommy <br>in the shadows of stadiums</p></div>
+        <div class="imgcontainerportrait"><img src="./resources/images/stadium.jpg" alt="listening to Soccer Mommy en las sombras de los estadios" id="stadiumpic"><p>listening to Soccer Mommy <br>in the shadow of stadiums</p></div>
 
         <div class="imgcontainerhigher"><img src="./resources/images/moon.jpg" alt="mooncrop" id="moonpic"><p>mooncrop</p></div>
 
