Add yachts, poolinsect and flightdecks

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
         <p>
             <a href="./entries/amazonia140522.html">amazonia140522</a>
             <br><a href="./entries/frames050522.html">frames050522</a>
+            <br><a href="./entries/poolinsect020722.html">poolinsect020722</a>
             <br><a href="./entries/prometheanparty240622.html">prometheanparty240622</a>
             <br><a href="./entries/seahippo080522.html">seahippo080522</a>
             <br><a href="./entries/skywitchlandbubbles250622.html">skywitchlandbubbles250622</a>
             <br><a href="./entries/videoreps250522.html">videoreps230522</a>
             <br><a href="./entries/wetradiovoice230522.html">wetradiovoice230522</a>
+            <br><a href="./entries/yachts070722.html">yachts070722</a>
         </p>
     </div>
   
@@ -45,6 +47,7 @@
     <div class="links">
         <p>
             <a href="./entries/opticverve/celestiac100622.html">celestiac100622</a>
+            <br><a href="./entries/opticverve/flightdecks250622.html">flightdecks250622</a>
             <br><a href="./entries/opticverve/homerun070622.html">homerun070622</a>
             <br><a href="./entries/opticverve/motherplant170522.html">motherplant170522</a>
         </p>
