Add last sentence and correct mistaken duplication on flightdecks

--- a/entries/opticverve/flightdecks250622.html
+++ b/entries/opticverve/flightdecks250622.html
@@ -41,7 +41,7 @@
 
     <div class="mainentry">
         <p>
-            They could easily change colour, or start to spin. Each one the digital representation of a record playing. An impossible feat to mix them all into one co-ordinated sound.
+            The space we've left to inhabit beneath our wings could be immense. We irrigate in circles, endless rotations, even as we run ourselves out. 
         </p>
     </div>
 
