--- a/entries/opticverve/flightdecks250622.html
+++ b/entries/opticverve/flightdecks250622.html
@@ -21,7 +21,7 @@
 
     <div class="mainentryimagebreak">
         <p>
-            Ever decoding the shapes we leave on the ground. Looking down on Kansas, I think of pressing each of these fields like buttons.
+            Ever decoding the shapes we leave on the floor. Looking down on Kansas, I think of pressing each of these fields like buttons.
         </p>
     </div>
 
@@ -41,7 +41,7 @@
 
     <div class="mainentry">
         <p>
-            The space we've left to inhabit beneath our wings could be immense. We irrigate in circles, endless rotations, even as we run ourselves out. 
+            The space we've left to inhabit beneath our wings could be immense. We irrigate in circles, endless rotation, even as we run ourselves aground. 
         </p>
     </div>
 
