Edit red rock caption

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <div class="imgcontainerhigher"><img src="./resources/images/moon.jpg" alt="mooncrop" id="moonpic"><p>mooncrop</p></div>
 
-        <div class="imgcontainerhigher"><img src="./resources/images/redrock.jpg" alt="red rock echoing blues" id="redrockpic"><p>red rocks blues echo</p></div>
+        <div class="imgcontainerhigher"><img src="./resources/images/redrock.jpg" alt="red rock and rolled out blues" id="redrockpic"><p>red rock and rolled out blues</p></div>
 
         <div class="imgcontainerportrait"><img src="./resources/images/guineapig.jpg" id="guineapigpic" alt="galactic guinea pig, winged and ruling from the pane"><p>galactic guinea pig, winged and ruling from the pane</p></div>
 
