Edit dream drive and to do

--- a/entries/virtualdreamdrive210722.html
+++ b/entries/virtualdreamdrive210722.html
@@ -18,7 +18,7 @@
 
     
     <div class="subtitle">
-         virtualdreamdrive
+         virtual dream drive
     </div>
 
 
@@ -44,7 +44,7 @@
     </div>
 
     <div class="dateentry">
-           Somewhere in the dark over the Atlantic 210722         
+           Somewhere in the dark above the Atlantic 210722         
     </div>
 </body>
 </html>
